--- a/minuka.html
+++ b/minuka.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Plant Disease Detection</title>
+</head>
+<body>
+    <h1>Upload an Image to Detect Plant Disease</h1>
+    <form action="upload.php" method="POST" enctype="multipart/form-data">
+        <input type="file" name="plantImage" accept="image/*">
+        <button type="submit">Upload & Analyze</button>
+    </form>
+</body>
+</html>
