--- a/minuka.html
+++ b/minuka.html
@@ -26,7 +26,7 @@
 
     <script>
         let model;
-        const labels = ["test1", "Disease Type A", "Disease Type B", "Disease Type C"]; // Update with your Teachable Machine labels
+        const labels = ["powdery mildew","chili leaf","antracts","healthy"]; // Update with your Teachable Machine labels
 
         async function loadModel() {
             try {
